more fixes.