@@ -453,14 +453,6 @@ if [ "${PROD_MODE^^}" = "TRUE" ]; then
     sed -i 's/ERROR/WARN/g' $BASEDIR/$JBOSS_CONFIG/configuration/standalone-sip.xml
     sed -i 's/DEBUG/WARN/g' $BASEDIR/$JBOSS_CONFIG/configuration/standalone-sip.xml
 
-    echo "Update RestComm JVM Heap size options"
-    sed -i 's/Xms64m/Xms2048m/g' $BASEDIR/bin/standalone.conf
-    sed -i 's/Xmx512m/Xmx8192m -Xmn512m -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycle=100 -XX:CMSIncrementalDutyCycleMin=100 -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode/g' $BASEDIR/bin/standalone.conf
-    sed -i 's/XX:MaxPermSize=256m/XX:MaxPermSize=512m/g' $BASEDIR/bin/standalone.conf
-
-    echo "Update MMS JVM Heap size options"
-    sed -i 's/java.net.preferIPv4Stack=true/java.net.preferIPv4Stack=true -Xmx8192m -Xmn512m -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycle=100 -XX:CMSIncrementalDutyCycleMin=100 -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:MaxPermSize=512m -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000/g' $BASEDIR/mediaserver/bin/run.sh
-
     echo "Update MMS log level to WARN"
     sed -i 's/INFO/WARN/g' $BASEDIR/mediaserver/conf/log4j.xml
     sed -i 's/ERROR/WARN/g' $BASEDIR/mediaserver/conf/log4j.xml
@@ -480,6 +472,7 @@ if [ -n "$RMS_JAVA_OPTS" ]; then
     sed -i "s|RMS_JAVA_OPTS=.*|RMS_JAVA_OPTS='${RMS_JAVA_OPTS}'|" $BASEDIR/bin/restcomm/restcomm.conf
 fi
 
-
+##Additional SIP connector if set
+grep "ADDITIONAL_CONNECTOR_" /etc/container_environment.sh | cut -d " " -f2 |while read line; do  echo $line >> $BASEDIR/bin/restcomm/advanced.conf;   done
 #auto delete script after run once. No need more.
 rm -- "$0"
